test/bad/erased_to_non_erased_param.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let id : (0 A : U) -> A -> A = \A x. x;
let bad : (0 n : Nat) -> Nat = \n. id Nat n;
bad
